--- a/roles/check_ca/tasks/main.yml
+++ b/roles/check_ca/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: Create a directory if it does not exist
+  file:
+    path: /var/tmp/ca/
+    state: directory
+    mode: '0755'
+
 - name: Copy ca os local to docker contrainer
   shell: "docker cp /root/ca/{{ ca_name }} awx_task:/var/tmp/ca/{{ ca_name }}"
 
