--- a/roles/check_ca/tasks/main.yml
+++ b/roles/check_ca/tasks/main.yml
@@ -6,6 +6,7 @@
 
 - name: Copy ca os local to docker contrainer
   shell: "docker cp /root/ca/{{ ca_name }} awx_task:/var/tmp/ca/{{ ca_name }}"
+  delegate_to: awx
 
 - name: Check CA
   shell: "openssl req -noout -text -in /var/tmp/ca/{{ ca_name }} | grep 'Signature Algorithm'"
