--- a/roles/check_ca/tasks/main.yml
+++ b/roles/check_ca/tasks/main.yml
@@ -10,16 +10,16 @@
 
 - name: Check CA
   shell: "openssl req -noout -text -in /root/ca/{{ ca_name }} | grep 'Signature Algorithm'"
-  register: result
+  register: sha
 
 - name: If Sha1
   debug:
     msg: Pending
-  when: sha1 in {{ result.stdout }}
+  when: "'sha1WithRSAEncryption' in {{ sha.stdout }}"
   ignore_errors: yes
 
 - name: If Sha2
   debug:
     msg: Issues Certificate on Microsoft CA (2012)
-  when: sha256 in {{ result.stdout }}
+  when: "'sha256WithRSAEncryption' in {{ sha.stdout }}"
   ignore_errors: yes
