--- a/roles/check_ca/tasks/main.yml
+++ b/roles/check_ca/tasks/main.yml
@@ -15,11 +15,11 @@
 - name: If Sha1
   debug:
     msg: "Pending"
-  when: sha1WithRSAEncryption in sha.stdout
+  when: sha1WithRSAEncryption in "{{ sha.stdout }}"
   ignore_errors: yes
 
 - name: If Sha2
   debug:
     msg: "Issues Certificate on Microsoft CA (2012)"
-  when: sha256WithRSAEncryption in sha.stdout
+  when: sha256WithRSAEncryption in "{{ sha.stdout }}"
   ignore_errors: yes
