--- a/roles/check_ca/tasks/main.yml
+++ b/roles/check_ca/tasks/main.yml
@@ -9,17 +9,17 @@
 #   delegate_to: awx
 
 - name: Check CA
-  shell: "openssl req -noout -text -in /root/ca/{{ ca_name }} | grep 'Signature Algorithm'"
+  shell: "openssl req -noout -text -in /root/ca/{{ ca_name }} | grep 'Signature Algorithm' | awk '{print $3}'" 
   register: sha
 
 - name: If Sha1
   debug:
     msg: "Pending"
-  when: sha1WithRSAEncryption in "{{ sha.stdout }}"
+  when: "sha1WithRSAEncryption == {{ sha.stdout }}"
   ignore_errors: yes
 
 - name: If Sha2
   debug:
     msg: "Issues Certificate on Microsoft CA (2012)"
-  when: sha256WithRSAEncryption in "{{ sha.stdout }}"
+  when: "sha256WithRSAEncryption == {{ sha.stdout }}"
   ignore_errors: yes
